# taskbook

./: .gitignore  .prettierrc.yaml  AGENTS.md  CLAUDE.md  Caddyfile.webui  Dockerfile.client  Dockerfile.server  Dockerfile.webui  FEATURE_INVENTORY.md  LICENSE  PLAN.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  overlay.nix
.claude/: settings.local.json
.claude/agents/: reviewer.md  tester.md
.github/: release.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  snyk-security.yml
crates/taskbook-client/: Cargo.toml  README.md  build.rs
crates/taskbook-client/src/: api_client.rs  auth.rs  commands.rs  credentials.rs  main.rs  render.rs  sso.rs  taskbook.rs  update_check.rs
crates/taskbook-client/src/tui/: actions.rs  app.rs  autocomplete.rs  command_parser.rs  event.rs  mod.rs  theme.rs
crates/taskbook-client/src/tui/actions/: commands.rs  item_ops.rs  mod.rs  shortcuts.rs
crates/taskbook-client/src/tui/widgets/: command_line.rs  help_popup.rs  item_row.rs  journal_view.rs  status_bar.rs  timeline_view.rs
crates/taskbook-common/: Cargo.toml  README.md
crates/taskbook-common/src/: encryption.rs
crates/taskbook-common/src/models/: mod.rs  note.rs  task.rs
crates/taskbook-server/: Cargo.toml  README.md
crates/taskbook-server/src/: config.rs  constants.rs  db.rs  embedded_ui.rs  main.rs  metrics_middleware.rs  middleware.rs  openapi.rs  pat.rs  router.rs  telemetry.rs
crates/taskbook-server/src/db/: dal.rs  mod.rs
crates/taskbook-server/src/handlers/: events.rs  health.rs  items.rs  mod.rs  oidc.rs  tokens.rs  user.rs
crates/taskbook-server/src/migrations/: 003_add_oidc_identities.sql  004_add_encryption_key.sql  005_add_personal_access_tokens.sql
docs/: README.md  kubernetes.md  observability.md  server.md
docs/01-getting-started/: 01-installation.md  02-quick-start.md  03-configuration.md
docs/02-usage/: 01-cli-reference.md  02-sync.md
docs/03-server/: 01-server-setup.md  02-kubernetes.md  03-observability.md
docs/04-mcp-server/: 01-overview.md
docs/ai-agent-tools/: claude.md  copilot-cli.md  cursor.md  devops-http-setup.md  opencode.md  vscode.md
docs/guides/auth/: authelia-sso.md  mcp-oauth-setup.md  personal-access-tokens.md
docs/guides/mcp/: env-variables.md  tools-reference.md
docs/prompts/webui-option-c-spa/: 08-realtime-sync.md
sample/: .taskbook.json
sample/.taskbook/storage/: storage.json
scripts/: format-docs.sh
tests/e2e/: interop.test.ts  run_all.sh
