[package]
name = "taskbook-client"
version = "1.2.7"
edition = "2021"
rust-version = "1.75"
description = "Tasks, boards & notes for the command-line habitat"
license = "MIT"
repository = "https://github.com/klaussinani/taskbook"
keywords = ["cli", "task", "todo", "board", "note"]
categories = ["command-line-utilities"]

[dependencies]
taskbook-common = { path = "../taskbook-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
chrono = "0.4"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
ratatui = "0.30"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
rpassword = "7"
fs2 = "0.4"
unicode-width = "0.2"

[[bin]]
name = "tb"
path = "src/main.rs"
