[package]
name = "taskbook-server"
version = "1.2.6"
edition = "2021"
rust-version = "1.75"
description = "Server for taskbook sync"
license = "MIT"

[dependencies]
taskbook-common = { path = "../taskbook-common" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
opentelemetry = { version = "0.28", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", features = ["trace", "metrics", "logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.28"
tracing-opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry-appender-tracing = "0.28"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

[[bin]]
name = "tb-server"
path = "src/main.rs"
