[package]
name = "taskbook-server"
version = "1.5.4"
edition = "2021"
rust-version = "1.75"
description = "Server for taskbook sync"
license = "MIT"

[dependencies]
taskbook-common = { path = "../taskbook-common" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
base64 = "0.22"
axum-oidc = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-sessions = { version = "0.13", features = ["memory-store"] }
url = "2"
openidconnect = "3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
rust-embed = "8"
mime_guess = "2"
urlencoding = "2.1.3"

[[bin]]
name = "tb-server"
path = "src/main.rs"
